--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -6,7 +6,7 @@ env:
   TERM: xterm-256color
 
 font:
-    size: 8
+    size: 10
     # Normal (roman) font face
     normal:
         family: Iosevka NF
@@ -31,27 +31,27 @@ window:
 colors:
   # Default colors
   primary:
-    background: '0x202330'
-    foreground: '0xfae8b6'
+    background: '0x2c2e34'
+    foreground: '0xc8ccd4'
 
   # Normal colors
   normal:
-    black:   '0xFAE8B6'
-    red:     '0xff38a2'
-    green:   '0x9cd162'
-    yellow:  '0xffc85b'
-    blue:    '0xeba4ac'
-    magenta: '0xd9bcef'
-    cyan:    '0x87c095'
-    white:   '0xfff0f5'
+    black:   '0x2c2e34'
+    red:     '0xff6b6b'
+    green:   '0x8abeb7'
+    yellow:  '0xf0c674'
+    blue:    '0x81a2be'
+    magenta: '0xb294bb'
+    cyan:    '0x8abeb7'
+    white:   '0xc8ccd4'
 
   # Bright colors
-  bright:
-    black:   '0xFAE8B6'
-    red:     '0xff38a2'
-    green:   '0x9cd162'
-    yellow:  '0xffc85b'
-    blue:    '0xeba4ac'
-    magenta: '0xd9bcef'
-    cyan:    '0x87c095'
-    white:   '0xfff0f5'
+  # bright:
+  #   black:   '0xFAE8B6'
+  #   red:     '0xff38a2'
+  #   green:   '0x9cd162'
+  #   yellow:  '0xffc85b'
+  #   blue:    '0xeba4ac'
+  #   magenta: '0xd9bcef'
+  #   cyan:    '0x87c095'
+  #   white:   '0xfff0f5'
