--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,8 +4,8 @@ set -g mouse on
 
 # Prefix
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix C-k
+bind C-k send-prefix
 
 set -s escape-time 0
 
@@ -45,8 +45,7 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 # forget the find window.  That is for chumps
-bind-key -r f run-shell "tmux neww ~/bin/tmux-sessionizer"
+bind-key -r f run-shell "tmux neww tmux-sessionizer"
 
-bind-key -r i run-shell "tmux neww ~/bin/tmux-cht"
+bind-key -r i run-shell "tmux neww tmux-cht"
 
-bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/todo.md"
