--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,11 +9,11 @@ bind C-k send-prefix
 
 set -s escape-time 0
 
-set -g status-style 'bg=#242021 fg=#f2448b'
-set -g message-command-style 'bg=#f2448b fg=#242021'
-set -g message-style 'bg=#f2448b fg=#242021'
-set -g pane-active-border-style 'fg=#f2448b'
-set -g pane-border-style 'fg=#f2448b'
+set -g status-style 'bg=#4a4e6f fg=#c8ccd4'
+set -g message-command-style 'bg=#efaed4 fg=#2c2e34'
+set -g message-style 'bg=#efaed4 fg=#2c2e34'
+set -g pane-active-border-style 'fg=#efaed4'
+set -g pane-border-style 'fg=#c489b3'
 # copy-mode-match-style style
 # copy-mode-mark-style style
 # copy-mode-current-match-style style
