feat: refactored tmux status

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,51 +1,74 @@
-# Set terminal colors
 set -ag terminal-overrides ",$TERM:RGB"
 set -g mouse on
 
-# Prefix
 unbind C-b
-set -g prefix C-k
-bind C-k send-prefix
+set -g prefix C-a
+bind C-a send-prefix
 
-set -s escape-time 0
-
-set -g status-style 'bg=#4a4e6f fg=#c8ccd4'
-set -g message-command-style 'bg=#efaed4 fg=#2c2e34'
-set -g message-style 'bg=#efaed4 fg=#2c2e34'
-set -g pane-active-border-style 'fg=#efaed4'
-set -g pane-border-style 'fg=#c489b3'
-# copy-mode-match-style style
-# copy-mode-mark-style style
-# copy-mode-current-match-style style
-# mode-style style
-# popup-style style
-# popup-border-style style
-# window-status-activity-style style
-# window-status-bell-style style
-# window-status-current-style style
-# window-status-last-style style
-# window-status-style style
-# cursor-style style
-# window-active-style style
-# window-style style
-
-
-bind r source-file ~/.config/tmux/tmux.conf
 set -g base-index 1
+set -s escape-time 0
+set -g history-limit 50000
+
+set -g display-time 4000
+set -g status-position top
+set -g status-interval 5
+set -g status-keys emacs
+set -g focus-events on
+setw -g aggressive-resize on
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-# vim-like pane switching
-bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+bind r source-file ~/.config/tmux/tmux.conf
 
-# forget the find window.  That is for chumps
+bind -r s split-window -v -c "#{pane_current_path}"
+bind -r v split-window -h -c "#{pane_current_path}"
+bind -r C-p previous-window
+bind -r C-n next-window
+bind -r ^ last-window
+bind -r C-k select-pane -U
+bind -r C-j select-pane -D
+bind -r C-h select-pane -L
+bind -r C-l select-pane -R
+
 bind-key -r f run-shell "tmux neww tmux-sessionizer"
 
-bind-key -r i run-shell "tmux neww tmux-cht"
+set -g status-justify centre
+# \uf4c3
+set -g status on
+set -g status-interval 15
+set -g status-justify left
+set -g status-keys vi
+set -g status-left-length 200
+set -g status-position top
+set -g status-right-length 500
 
+# set -g status-right '#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #{=21:pane_title} %H:%M %d-%b-%y'
+# 🮊
+set -g status-left '' 
+set -g status-right '' 
+set -g status-left-style 'bg=default fg=white'
+set -g status-right-style 'bg=default fg=white'
+
+set -g window-status-separator '⋅'
+
+set -g window-status-style 'fg=white bg=default'
+set -g window-status-current-style 'fg=magenta bg=default'
+
+set -g status-left ' ⋅ #S #[fg=default] ⋅ #I ⋅ '
+
+set -g window-status-format ' ⟮#[fg=magenta] ⭕#[fg=default] #W ⟯ '
+set -g window-status-current-format ' ⟮ ⬤  #W ⟯ '
+    
+set -g status-right ' ⋅ #(tmux list-sessions | wc -l) #[fg=red]sessions#[fg=default]  ⋅ #[fg=magenta]#(whoami)#[fg=default]@#[fg=magenta]#H#[fg=default] ⋅ #[fg=blue]#(date +"%Y-%m-%d %H:%M:%S")#[fg=default] ⋅ '
+
+    
+# set -g pane-active-border-style style
+# set -g pane-border-format format
+# set -g pane-border-indicators [off | colour | arrows | both]
+# set -g pane-border-lines type
+# set -g pane-border-status [off | top | bottom]
+# set -g pane-border-style style
+# set -g popup-border-style style
+# set -g popup-border-lines type
