--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,21 +48,21 @@ set -g status-right-length 500
 # 🮊
 set -g status-left '' 
 set -g status-right '' 
-set -g status-left-style 'bg=default fg=white'
-set -g status-right-style 'bg=default fg=white'
+set -g status-style 'bg=black fg=white'
+set -g status-left-style 'bg=black fg=white'
+set -g status-right-style 'bg=black fg=white'
 
 set -g window-status-separator '⋅'
 
-set -g window-status-style 'fg=white bg=default'
-set -g window-status-current-style 'fg=magenta bg=default'
+set -g window-status-style 'fg=white bg=black'
+set -g window-status-current-style 'fg=magenta bg=black'
 
 set -g status-left ' ⋅ #S #[fg=default] ⋅ #I ⋅ '
 
-set -g window-status-format ' ⟮#[fg=magenta] ⭕#[fg=default] #W ⟯ '
+set -g window-status-format ' ⟮#[fg=magenta] ⭕#[fg=black] #W ⟯ '
 set -g window-status-current-format ' ⟮ ⬤  #W ⟯ '
     
 set -g status-right ' ⋅ #(tmux list-sessions | wc -l) #[fg=red]sessions#[fg=default]  ⋅ #[fg=magenta]#(whoami)#[fg=default]@#[fg=magenta]#H#[fg=default] ⋅ #[fg=blue]#(date +"%Y-%m-%d %H:%M:%S")#[fg=default] ⋅ '
-
     
 # set -g pane-active-border-style style
 # set -g pane-border-format format
