feat: tmux fixes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
-set -ag terminal-overrides ",$TERM:RGB"
+set -g default-terminal "xterm-256color"
+set -ag terminal-overrides ",$TERM:Tc"
 set -g mouse on
 
 unbind C-b
@@ -44,8 +45,6 @@ set -g status-left-length 200
 set -g status-position top
 set -g status-right-length 500
 
-# set -g status-right '#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #{=21:pane_title} %H:%M %d-%b-%y'
-# 🮊
 set -g status-left '' 
 set -g status-right '' 
 set -g status-style 'bg=black fg=white'
@@ -59,8 +58,8 @@ set -g window-status-current-style 'fg=magenta bg=black'
 
 set -g status-left ' ⋅ #S #[fg=default] ⋅ #I ⋅ '
 
-set -g window-status-format ' ⟮#[fg=magenta] ⭕#[fg=black] #W ⟯ '
-set -g window-status-current-format ' ⟮ ⬤  #W ⟯ '
+set -g window-status-format ' ⟮#[fg=magenta] ⭕#[fg=default] #W ⟯ '
+set -g window-status-current-format ' ⟮#[fg=white] ⬤  #W #[fg=white]⟯ '
     
 set -g status-right ' ⋅ #(tmux list-sessions | wc -l) #[fg=red]sessions#[fg=default]  ⋅ #[fg=magenta]#(whoami)#[fg=default]@#[fg=magenta]#H#[fg=default] ⋅ #[fg=blue]#(date +"%Y-%m-%d %H:%M:%S")#[fg=default] ⋅ '
     
