--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -25,27 +25,27 @@ program = "/bin/fish"
 [window]
 opacity = 0.9
 
-[colors.primary]
-foreground = "#e0def4"
-background = "#2c2e34"
-# dim_foreground = "#908caa"
-# bright_foreground = "#e0def4"
 
-[colors.cursor]
-text = "#2c2e34"
-cursor = "#efaed4"
-
-[colors.vi_mode_cursor]
-text = "#2c2e34"
-cursor = "#ff6b6b"
+[colors.bright]
+black = "#747c84"
+blue = "#ae95c7"
+cyan = "#95aec7"
+green = "#95c7ae"
+magenta = "#c795ae"
+red = "#c7ae95"
+white = "#ffffff"
+yellow = "#aec795"
 
 [colors.normal]
-black = "#2c2e34"
-blue = "#81a2b3"
+black = "#1c2023"
+blue = "#81a2be"
 cyan = "#8abeb7"
 green = "#8abeb7"
 magenta = "#efaed4"
 red = "#ff6b6b"
-white = "#c8ccd4"
+white = "#c7ccd1"
 yellow = "#f0c674"
 
+[colors.primary]
+background = "#1c2023"
+foreground = "#c7ccd1"
