--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,11 +58,11 @@ set -g window-status-current-style 'fg=magenta bg=black'
 
 set -g status-left ' ⋅ #S #[fg=default] ⋅ #I ⋅ '
 
-set -g window-status-format ' #[fg=magenta] ⭕#[fg=default] #W '
-set -g window-status-current-format ' #[fg=magenta]⟮ ⬤  #W ⟯#[fg=white] '
+set -g window-status-format ' ⟮#[fg=magenta] ⭕#[fg=default] #{b:pane_current_path} ⟯ '
+set -g window-status-current-format ' #[fg=magenta]⟮ ⬤  #{b:pane_current_path} ⟯#[fg=white] '
     
 set -g status-right ' ⋅ #(tmux list-sessions | wc -l) #[fg=red]sessions#[fg=default]  ⋅ #[fg=magenta]#(whoami)#[fg=default]@#[fg=magenta]#H#[fg=default] ⋅ #[fg=blue]#(date +"%Y-%m-%d %H:%M:%S")#[fg=default] ⋅ '
-    
+
 # set -g pane-active-border-style style
 # set -g pane-border-format format
 # set -g pane-border-indicators [off | colour | arrows | both]
